--- a/HTML/Transportadora/transid.css
+++ b/HTML/Transportadora/transid.css
@@ -117,3 +117,92 @@ main{
     border-radius: 20px;
     padding: 10px;
 }
+.sectionMain h1{
+    text-align: center;
+}
+.sectionMain p{
+    line-height: 20px;
+    text-align: justify;
+}
+.sectionMain article{
+    height: 250px;
+}
+.sectionMain footer{
+    text-align: center;
+}
+/* Botões do main article*/
+.botao{
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: .9em;
+    padding: 5px 15px;
+}
+a.botao{
+    color: #FFF;
+    border: 1px solid;
+    border-radius: 5px;
+}
+.botao.saiba_mais_caminhoes{
+    background: linear-gradient(to right, #C0E079, #98BA55);
+    text-shadow: 1px 1px 0 #000;
+    border-color: #98BA55;
+}
+.botao.saiba_mais_caminhoes:hover{
+    color: #7C9B41;
+    border-color: #7C9B41;
+}
+.botao.saiba_mais_avioes{
+    background: linear-gradient(to right, #C0E079, #98BA55);
+    text-shadow: 1px 1px 0 #000;
+    border-color: #98BA55;
+}
+.botao.saiba_mais_avioes:hover {
+    color: #7C9B41;
+    border-color: #7C9B41;
+}
+.botao.saiba_mais_rastreamento{
+    background: linear-gradient(to right, #C0E079, #98BA55);
+    text-shadow: 1px 1px 0 #000;
+    border-color: #98BA55;
+}
+.botao.saiba_mais_rastreamento:hover {
+    color: #7C9B41;
+    border-color: #7C9B41;
+}
+.botao.saiba_mais_smartphone{
+    background: linear-gradient(to right, #C0E079, #98BA55);
+    text-shadow: 1px 1px 0 #000;
+    border-color: #98BA55;
+}
+.botao.saiba_mais_smartphone:hover {
+    color: #7C9B41;
+    border-color: #7C9B41;
+}
+#sectionCliente{
+    width: 100%;
+    height: 320%;
+    background-color: #FFFFFF;
+}
+#sectionCliente h1{
+    text-align: center;
+    padding-top: 10px;
+}
+#conteudoCliente{
+    border: 1px solid red;
+    height: 200px;
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+}
+#conteudoCliente article{
+    border: 4px solid #919191;
+    margin: 10px;
+    border-radius: 10px;
+}
+#conteudoCliente img{
+    width: 100%;
+    height: 100%;
+}
